<!--Name: DUNG LY         ID:N01327929  -->
<resources>
    <string name="app_name">DungLyN01327929</string>
    <string name="help">Help</string>
    <string name="menudungly">DungLy</string>
    <string name="menupizza">Pizza</string>
    <string name="cbcurl">https://www.cbc.ca/</string>
    <string name="pizaurl">https://www.pizzapizza.ca/store/1/delivery</string>
    <string name="dunglymenutoast">My name is: DUNG LY (Danny)</string>
    <string name="pizza_pizza">Pizza Pizza</string>
    <string name="pizza_hut">Pizza Hut</string>
    <string name="pizza_nova">Pizza Nova</string>
    <string name="pizza_domino">Pizza Domino</string>
    <string name="next">NEXT</string>
    <string name="cheese">Cheese</string>
    <string name="sausage">Sausage</string>
    <string name="bell_pepper">Bell Pepper</string>
    <string name="bacon">Bacon</string>
    <string name="pine_apple">PineApple</string>
    <string name="pizza_size">Pizza Size</string>
    <string name="topping">Topping</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="new_york">New York</string>
    <string name="seafood">Seafood</string>
    <string name="toastres">Please choose the pizza restaurant you want !</string>
    <string name="restaurantlink">Please choose the Restaurant to get link</string>
    <string name="pizzapizzalink">https://www.pizzapizza.ca/</string>
    <string name="pizzahutlink">https://www.pizzahut.ca/</string>
    <string name="pizzadominolink">https://www.dominos.ca/</string>
    <string name="pizzanovalink">https://pizzanova.com/</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="payment_information">Payment information</string>
    <string name="card_number_limit_16_digits">Card number limit 16 digits</string>
    <string name="date">Date</string>
    <string name="cvv">cvv</string>
    <string name="pizza_information">Pizza Information:</string>
    <string name="order">Order</string>
    <string name="check_out">Check out</string>
    <string name="full_name1">Full Name:</string>
    <string name="order_information">Order Information</string>
    <string name="pizza_information1">Pizza information</string>
    <string name="card">Card</string>
    <string name="ccv">CCV</string>
</resources>