<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LyActivity2">

    <ImageView
        android:id="@+id/imgvlogo"
        android:layout_width="141dp"
        android:layout_height="117dp"

        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/pizzapizza" />

    <TextView
        android:id="@+id/textvpizasize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/textvtopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/textvpizatype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <RadioGroup
        android:id="@+id/pizzasizegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434">

        <RadioButton
            android:id="@+id/radiobtnsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/radiobtnmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radiobtnlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pizzatypegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737">

        <RadioButton
            android:id="@+id/radiobtnnewyork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_york" />

        <RadioButton
            android:id="@+id/radiobtnseafood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seafood" />
    </RadioGroup>

    <Button
        android:id="@+id/btnnext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <CheckBox
            android:id="@+id/checkbbacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bacon" />

        <CheckBox
            android:id="@+id/checkbsausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sausage" />

        <CheckBox
            android:id="@+id/checkbcheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese" />

        <CheckBox
            android:id="@+id/checkbbellpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bell_pepper" />

        <CheckBox
            android:id="@+id/checkbpineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pine_apple" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>