<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DungActivity">

    <ImageButton
        android:id="@+id/imgbtnpizapiza"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="239dp"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/btnnext"
        app:layout_constraintEnd_toStartOf="@+id/imgbtnpizzahut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizzapizza" />

    <ImageButton
        android:id="@+id/imgbtnpizzahut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnpizapiza"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizzahut" />

    <ImageButton
        android:id="@+id/imgbtnpnova"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="15dp"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/imgbtndomi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/pizzanova" />

    <ImageButton
        android:id="@+id/imgbtndomi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="15dp"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnpnova"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dominopizza" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="34dp"
        android:text="@string/pizza_pizza"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnpnova"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnpizapiza" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="314dp"
        android:text="@string/pizza_nova"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnpnova" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="34dp"
        android:text="@string/pizza_hut"
        app:layout_constraintBottom_toTopOf="@+id/imgbtndomi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnpizzahut" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="314dp"
        android:text="@string/pizza_domino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imgbtndomi" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="222dp"
        android:text="@string/next"
        android:onClick="PizzaStore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnpizapiza" />
</androidx.constraintlayout.widget.ConstraintLayout>